// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InlineSpacer > matches snapshot 1`] = `
<div>
  <div
    class="sc-fYsHOw eidifT"
    data-testid="spacer"
    marginleft="2rem"
    paddingright="1rem"
  />
</div>
`;

exports[`Spacer > matches snapshot 1`] = `
<div>
  <div
    class="sc-Qotzb fTRIdJ"
    data-testid="spacer"
    margintop="1rem"
    paddingbottom="2rem"
  />
</div>
`;
